# fcitx5-bridge

./: .gitignore  CMakeLists.txt  Makefile  README.md  bridge-addon-fcn.conf  bridge-addon-fcp.conf  bridge-addon.conf  bridge-fcn.conf  bridge-fcp.conf  bridge.conf  bridge.cpp  bridge.h  msgs.pb.cc  msgs.pb.h  msgs.proto
